--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
     }
   </style>
 </head>
+
+  <script>
+document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+    e.preventDefault();
+
+    const formData = new FormData(this);
+    const json = {};
+
+    formData.forEach((value, key) => {
+        json[key] = value;
+    });
+
+    const response = await fetch("https://script.google.com/macros/s/AKfycbw1O6Z4WfmJGPTq7VAGG4C3GVsys8WprYotFbvYo-3exWqnJU_avG09hHowutDe1w-H/exec", {
+        method: "POST",
+        body: JSON.stringify(json),
+        headers: {
+            "Content-Type": "application/json"
+        }
+    });
+
+    if (response.ok) {
+        alert("Booking submitted successfully!");
+        this.reset();
+    } else {
+        alert("Error submitting booking.");
+    }
+});
+</script>
+  
 <body>
 
   <div class="container">
