--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ document.getElementById("bookingForm").addEventListener("submit", async function
         json[key] = value;
     });
 
-    const response = await fetch("https://script.google.com/macros/s/AKfycbw1O6Z4WfmJGPTq7VAGG4C3GVsys8WprYotFbvYo-3exWqnJU_avG09hHowutDe1w-H/exec", {
+    const response = await fetch("https://script.google.com/macros/s/AKfycbw1O6Z4WfmJGPTq7VAGG4C3GVsys8WprYotFbvYo-3exWqnJU_avG09hHowutDe1w-H/exec"), {
         method: "POST",
         body: JSON.stringify(json),
         headers: {
