--- a/index.html
+++ b/index.html
@@ -61,38 +61,11 @@
   </style>
 </head>
 
-  <script>
-document.getElementById("bookingForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
-
-    const formData = new FormData(this);
-    const json = {};
-
-    formData.forEach((value, key) => {
-        json[key] = value;
-    });
-
-    const response = await fetch("https://script.google.com/macros/s/AKfycbw1O6Z4WfmJGPTq7VAGG4C3GVsys8WprYotFbvYo-3exWqnJU_avG09hHowutDe1w-H/exec"), {
-        method: "POST",
-        body: JSON.stringify(json),
-        headers: {
-            "Content-Type": "application/json"
-        }
-    });
-
-    if (response.ok) {
-        alert("Booking submitted successfully!");
-        this.reset();
-    } else {
-        alert("Error submitting booking.");
-    }
-});
-</script>
-  
 <body>
 
   <div class="container">
     <h2>Motorcycle Detailing Booking</h2>
+
     <form id="bookingForm">
       <label for="name">Full Name *</label>
       <input type="text" id="name" name="name" required>
@@ -128,24 +101,27 @@ document.getElementById("bookingForm").addEventListener("submit", async function
     </form>
   </div>
 
+  <!-- WORKING SCRIPT -->
   <script>
-    const form = document.getElementById('bookingForm');
-    form.addEventListener('submit', async (e) => {
+    document.getElementById("bookingForm").addEventListener("submit", async function(e) {
       e.preventDefault();
-      const formData = new FormData(form);
+
+      const formData = new FormData(this);
+
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbxFAZJ6Hij4k2izszD2xDtK-Hx5GFnDGx5PixoojCWmXKXL4Z5B4oCivs9dd9HyvuRc/exec', {
-          method: 'POST',
+        const response = await fetch("https://script.google.com/macros/s/AKfycbw1O6Z4WfmJGPTq7VAGG4C3GVsys8WprYotFbvYo-3exWqnJU_avG09hHowutDe1w-H/exec", {
+          method: "POST",
           body: formData
         });
+
         if (response.ok) {
-          alert('Booking submitted successfully!');
-          form.reset();
+          alert("Booking submitted successfully!");
+          this.reset();
         } else {
-          alert('Error submitting booking. Please try again.');
+          alert("Error submitting booking. Please try again.");
         }
       } catch (error) {
-        alert('Error submitting booking. Please check your internet connection.');
+        alert("Error submitting booking. Please check your internet connection.");
       }
     });
   </script>
