--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p id="responseMessage" style="color:red;"></p>
 
 <script>
-const scriptURL = "YOUR_WEB_APP_URL_GOES_HERE"; // MUST end with /exec
+const scriptURL = "https://script.google.com/macros/s/AKfycbw_oH5ZCF1ZsvV5EC0YV3jiS7_h6Rz0Eeg14kGlJaRv_L7ZrCesx8HUy7BuBdq83LP8/exec"; // MUST end with /exec
 
 document.getElementById('bookingForm').addEventListener('submit', async (e) => {
   e.preventDefault();
