--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-const scriptURL = "https://script.google.com/macros/s/AKfycbxIq4HllfsvMOg2Mtg8fBqyoYCA7l3K-l6U6oHZBTUWTeTKgFQUWpC5AmXEFOskVhg0/exec";
+const scriptURL = "YOUR_NEW_EXEC_URL_HERE";
 
 document.getElementById('bookingForm').addEventListener('submit', async (e) => {
   e.preventDefault();
