--- a/index.html
+++ b/index.html
@@ -1,133 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Motorcycle Detailing Booking</title>
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycby7DrRYZYuaCds_yQtsvOeCgdm9TUFuZ9ZmcrBCVh727zGbDPz48Pr4OiRZbmreJMxo/exec";
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 500px;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-      color: #555;
-    }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-    button {
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      margin-top: 20px;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .note {
-      font-size: 12px;
-      color: #777;
-      margin-top: 5px;
-    }
-  </style>
-</head>
+document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
 
-<body>
+  const formData = Object.fromEntries(new FormData(this).entries());
 
-  <div class="container">
-    <h2>Motorcycle Detailing Booking</h2>
-
-    <form id="bookingForm">
-
-      <label for="name">Full Name *</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="phone">Phone Number *</label>
-      <input type="tel" id="phone" name="phone" required>
-
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="email">
-
-      <label for="bike_type">Motorcycle Type</label>
-      <input type="text" id="bike_type" name="bike_type">
-
-      <label for="service">Service Required *</label>
-      <select id="service" name="service" required>
-        <option value="">Select a service</option>
-        <option value="Wash">Wash</option>
-        <option value="Full Detailing">Full Detailing</option>
-        <option value="Paint Protection">Paint Protection</option>
-      </select>
-
-      <label for="date">Preferred Date *</label>
-      <input type="date" id="date" name="date" required>
-
-      <label for="time">Preferred Time</label>
-      <input type="time" id="time" name="time">
-
-      <label for="notes">Additional Notes</label>
-      <textarea id="notes" name="notes" rows="4" placeholder="Any special requests?"></textarea>
-
-      <button type="submit">Book Now</button>
-
-      <p class="note">* Required fields</p>
-    </form>
-  </div>
-
-  <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycby7DrRYZYuaCds_yQtsvOeCgdm9TUFuZ9ZmcrBCVh727zGbDPz48Pr4OiRZbmreJMxo/exec";
-    document.getElementById('bookingForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const form = e.target;
-      const formData = Object.fromEntries(new FormData(form).entries());
-
-      try {
-        await fetch(scriptURL, {
-          method: "POST",
-          mode: "no-cors",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(formData)
-        });
-
-        alert("Booking submitted successfully!");
-        form.reset();
-
-      } catch (error) {
-        alert("Error submitting booking. Please check your internet connection.");
-      }
+  try {
+    const response = await fetch(scriptURL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(formData)
     });
-  </script>
 
-</body>
-</html>
+    alert("Booking submitted successfully!");
+    this.reset();
+
+  } catch (error) {
+    alert("Error submitting booking: " + error);
+  }
+});
+</script>
