--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <script>
-    const scriptURL = "https://docs.google.com/spreadsheets/d/1vh0xoQYym0XmGtN24r52SU3e4IX0ojxOFBx5-fP80bo/edit?usp=sharing";
+    const scriptURL = "https://script.google.com/macros/s/AKfycby3IQWzlj3wADmN6iEY-7o8RzAddncqqmBtuEZn2hDRvjkEzo_u9a2ahMczfoVrVlrs/exec";
 
     document.getElementById('bookingForm').addEventListener('submit', async (e) => {
       e.preventDefault();
