--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbwwjZnXOYQQSYg43sHobOIyYxQjVyEp-lt2CBANVcd1kmHRR37KTbpeFgaLTPw-KAFT/exec";
+const scriptURL = "https://broad-bird-2f68.02wheeldetailing.workers.dev/";
 
     document.getElementById('bookingForm').addEventListener('submit', async (e) => {
       e.preventDefault();
