--- a/index.html
+++ b/index.html
@@ -3,49 +3,121 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Motorcycle Detailing Booking</title>
-
+  <title>Book Motorcycle Detailing</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+    /* ============ RESET & BASE ============ */
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
     }
-    .container {
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* =========== FORM CONTAINER =========== */
+    .booking-container {
+      max-width: 600px;
+      margin: 40px auto;
       background-color: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      padding: 30px 35px;
+    }
+    .booking-container h2 {
+      text-align: center;
+      margin-bottom: 25px;
+      font-size: 26px;
+      color: #222;
+    }
+
+    /* ========== FORM FIELDS ========== */
+    form label {
+      display: block;
+      margin-top: 18px;
+      font-weight: 500;
+      color: #444;
+    }
+    form input[type="text"],
+    form input[type="tel"],
+    form input[type="email"],
+    form input[type="date"],
+    form input[type="time"],
+    form select,
+    form textarea {
       width: 100%;
-      max-width: 500px;
+      padding: 12px 14px;
+      margin-top: 6px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 15px;
+      background-color: #fafafa;
+      transition: border-color 0.2s;
     }
-    h2 { text-align: center; margin-bottom: 20px; color: #333; }
-    label { display: block; margin-top: 15px; font-weight: bold; color: #555; }
-    input, select, textarea, button {
-      width: 100%; padding: 10px; margin-top: 5px;
-      border-radius: 5px; border: 1px solid #ccc;
-      font-size: 16px; box-sizing: border-box;
+    form input:focus,
+    form select:focus,
+    form textarea:focus {
+      outline: none;
+      border-color: #007bff;
+      background-color: #fff;
     }
-    button {
-      background-color: #007bff; color: #fff; border: none;
-      cursor: pointer; margin-top: 20px; transition: background 0.3s;
+    form textarea {
+      resize: vertical;
+      min-height: 90px;
     }
-    button:hover { background-color: #0056b3; }
-    .note { font-size: 12px; color: #777; margin-top: 5px; }
+
+    /* ============= SUBMIT BUTTON ============= */
+    .btn-submit {
+      width: 100%;
+      padding: 14px;
+      margin-top: 28px;
+      border: none;
+      background-color: #007bff;
+      color: #fff;
+      border-radius: 5px;
+      font-size: 17px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s, transform 0.1s;
+    }
+    .btn-submit:hover {
+      background-color: #0056b3;
+      transform: translateY(-1px);
+    }
+    .btn-submit:active {
+      transform: translateY(0);
+    }
+
+    /* ========== NOTE TEXT ========== */
+    .note {
+      font-size: 13px;
+      color: #666;
+      margin-top: 8px;
+      text-align: center;
+    }
+
+    /* ======= RESPONSIVE ======= */
+    @media (max-width: 640px) {
+      .booking-container {
+        padding: 20px 20px;
+      }
+    }
   </style>
 </head>
-
 <body>
 
-  <div class="container">
-    <h2>Motorcycle Detailing Booking</h2>
+  <div class="booking-container">
+    <h2>Book Your Motorcycle Detailing</h2>
 
     <form id="bookingForm">
-
       <label for="name">Full Name *</label>
       <input type="text" id="name" name="name" required>
 
@@ -60,7 +132,7 @@
 
       <label for="service">Service Required *</label>
       <select id="service" name="service" required>
-        <option value="">Select a service</option>
+        <option value="">-- Select Service --</option>
         <option value="Wash">Wash</option>
         <option value="Full Detailing">Full Detailing</option>
         <option value="Paint Protection">Paint Protection</option>
@@ -73,35 +145,33 @@
       <input type="time" id="time" name="time">
 
       <label for="notes">Additional Notes</label>
-      <textarea id="notes" name="notes" rows="4" placeholder="Any special requests?"></textarea>
+      <textarea id="notes" name="notes" placeholder="Any special requests?"></textarea>
 
-      <button type="submit">Book Now</button>
-      
+      <button type="submit" class="btn-submit">Book Now</button>
       <p class="note">* Required fields</p>
     </form>
   </div>
 
   <script>
-const scriptURL = "https://broad-bird-2f68.02wheeldetailing.workers.dev/";
+    const scriptURL = "https://broad-bird-2f68.02wheeldetailing.workers.dev/";
 
-    document.getElementById('bookingForm').addEventListener('submit', async (e) => {
+    document.getElementById('bookingForm').addEventListener('submit', async function(e) {
       e.preventDefault();
-
-      const formData = Object.fromEntries(new FormData(e.target).entries());
+      const form = e.target;
+      const data = Object.fromEntries(new FormData(form).entries());
 
       try {
-        await fetch(scriptURL, {
+        const resp = await fetch(scriptURL, {
           method: "POST",
           mode: "cors",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(formData)
+          body: JSON.stringify(data),
         });
-
         alert("Booking submitted successfully!");
-        e.target.reset();
-
-      } catch (error) {
-        alert("Error submitting booking.");
+        form.reset();
+      } catch (err) {
+        alert("Error submitting booking. Please try again.");
+        console.error(err);
       }
     });
   </script>
