--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
 
   <div class="booking-container">
-    <h2>Two Wheel Detailing</h2>
+    <h2>Two Wheel Detailing Booking Form</h2>
 
     <form id="bookingForm">
       <label for="name">Full Name *</label>
