--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
     }
 
     /* =========== FORM CONTAINER =========== */
-    .booking-container {
-      max-width: 600px;
-      margin: 40px auto;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      padding: 30px 35px;
-    }
+   .container {
+  background-image: url("background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA3kAAAMACAYAAACZ3a7cAAEAAElEQVR4nJT9S84...kSasT814hOO0UhGkdf1OYYKKqzlu++IaF2B1l1CrzilFVHZrvDZ8lUpu9iStNU9");
+");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+  width: 100%;
+  max-width: 500px;
+  color: white; 
+  backdrop-filter: blur(2px);
+}
+
     .booking-container h2 {
       text-align: center;
       margin-bottom: 25px;
