--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     /* =========== FORM CONTAINER =========== */
    .container {
-  background-image: url("background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA3kAAAMACAYAAACZ3a7cAAEAAElEQVR4nJT9S84...kSasT814hOO0UhGkdf1OYYKKqzlu++IaF2B1l1CrzilFVHZrvDZ8lUpu9iStNU9");
+  background-image: url("background-image: url("iVBORw0KGgoAAAANSUhEUgAAA3kAAAMACAYAAACZ3a7cAAEAAElEQVR4nJT9S841SbM1CJlFZlESokpUmxnQrIkg6MEYEMwBiQYtGAMDqS49hEQD1TyQqv7zny");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
