--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@ body {
   overflow: hidden;
   box-shadow: 0 8px 30px rgba(0,0,0,0.8);
   background-color: #111;
+  aspect-ratio: 889 / 768; /* exact image ratio */
+  display: flex;
+  flex-direction: column;
 }
 
 .bg-image-container {
   position: relative;
   width: 100%;
-  height: auto;
+  flex: 0 0 auto;
 }
 
 .bg-image-container img {
   width: 100%;
-  max-height: 350px; /* adjust for best visual fit */
-  object-fit: contain; /* keeps natural aspect ratio */
+  height: 100%;
+  object-fit: cover; /* fills container while maintaining aspect ratio */
   display: block;
 }
 
@@ -44,13 +47,15 @@ body {
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.25);
   pointer-events: none;
 }
 
 .booking-container {
   padding: 30px;
   color: #fff;
+  flex: 1 1 auto; /* allows form to grow */
+  overflow-y: auto;
 }
 
 .booking-container h2 {
@@ -109,13 +114,11 @@ textarea { resize: vertical; min-height: 90px; }
 @media (max-width: 768px) {
   .booking-container { padding: 25px; }
   .booking-container h2 { font-size: 24px; }
-  .bg-image-container img { max-height: 250px; }
 }
 
 @media (max-width: 480px) {
   .booking-container { padding: 20px; }
   .booking-container h2 { font-size: 20px; }
-  .bg-image-container img { max-height: 180px; }
 }
 </style>
 </head>
